OLINURIS-87: prevent carousel indicators from wrapping at tablet size

--- a/css/olinuris/_home.scss
+++ b/css/olinuris/_home.scss
@@ -187,6 +187,9 @@
 	.hero {
 		min-height: 250px;
 	}
+	.carousel-indicators {
+		width: auto;
+	}
 
 }
 
@@ -197,6 +200,9 @@
 	}
 	.hero {
 		min-height: 300px;
+	}
+	.carousel-indicators {
+		width: 60%;
 	}
 }
 
